--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "element-ui": "^2.13.2",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9"
+  },
+  "devDependencies": {
+    "babel-plugin-component": "^1.1.1"
   }
 }
